# minnehack2025

./: Cargo.toml
pages/: faq.html  index.html
src/: main.rs
website/: index.html  main.js  style.css
