[package]
name = "minnehack2025"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
futures-channel = "0.3.31"
futures-macro = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-tungstenite = "0.26.1"
warp = "0.3.7"
